# royal-kludge-configurator

./: CHANGELOG.md  changelog.config.ts  package.json
.github/workflows/: publish.yml
app/: app.vue
app/components/: KeyMappingEditor.vue  PerKeyColorEditor.vue
app/composables/: useDatabase.ts  usePermissions.ts  useUpdater.ts
app/pages/: index.vue
app/pages/keyboard/: [id].vue
scripts/: release.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  hid.rs  keyboard.rs  lib.rs  main.rs  models.rs
